Fix button appender spacing

--- a/src/blocks/button-container/editor.scss
+++ b/src/blocks/button-container/editor.scss
@@ -7,5 +7,5 @@
 }
 
 .fx-button-wrapper .editor-block-list__layout > .block-list-appender {
-    display: none;
+    display: none !important;
 }
